some quiz routes documentation
excluded the routes that rely on userid
